<resources>
	<string name="app_name" translatable="false">BlueChat</string>
	<string name="action_settings">Settings</string>
	<string name="action_add">New chat</string>
	<string name="action_accounts">Manage accounts</string>
	<string name="action_end_conversation">Delete chat</string>
	<string name="action_contact_details">Contact details</string>
	<string name="action_muc_details">Group details</string>
	<string name="action_secure">Secure Chat</string>
	<string name="action_add_account">Add account</string>
	<string name="action_edit_contact">Edit name</string>
	<string name="action_add_phone_book">Add to phone book</string>
	<string name="action_delete_contact">Delete from Contacts</string>
	<string name="action_block_contact">Block contact</string>
	<string name="action_unblock_contact">Unblock contact</string>
	<string name="action_block_domain">Block domain</string>
	<string name="action_unblock_domain">Unblock domain</string>
	<string name="title_activity_manage_accounts">Manage Accounts</string>
	<string name="title_activity_settings">Settings</string>
	<string name="title_activity_conference_details">Group Details</string>
	<string name="title_activity_contact_details">Contact Details</string>
	<string name="title_activity_sharewith">Share with BlueChat</string>
	<string name="title_activity_start_conversation">Start Chat</string>
	<string name="title_activity_choose_contact">Choose contact</string>
	<string name="title_activity_block_list">Block list</string>
	<string name="just_now">just now</string>
	<string name="minute_ago">1 min ago</string>
	<string name="minutes_ago">%d mins ago</string>
	<string name="unread_conversations">unread Chats</string>
	<string name="sending">sending…</string>
	<string name="message_decrypting">Decrypting message. Please wait…</string>
	<string name="pgp_message">OpenPGP encrypted message</string>
	<string name="nick_in_use">Nickname is already in use</string>
	<string name="admin">Admin</string>
	<string name="owner">Owner</string>
	<string name="moderator">Moderator</string>
	<string name="participant">Participant</string>
	<string name="visitor">Visitor</string>
	<string name="remove_contact_text">Remove %s from your contacts?</string>
	<string name="block_contact_text">Block %s from sending you messages?</string>
	<string name="unblock_contact_text">Unblock %s and allow them to send you messages?</string>
	<string name="block_domain_text">Block all contacts from %s?</string>
	<string name="unblock_domain_text">Unblock all contacts from %s?</string>
	<string name="contact_blocked">Contact blocked</string>
	<string name="remove_bookmark_text">Remove %s as a bookmark? The conversation associated with this bookmark will not be removed.</string>
	<string name="register_account">Register new account</string>
	<string name="change_password_on_server">Change password</string>
	<string name="share_with">Share with…</string>
	<string name="start_conversation">Start Chat</string>
	<string name="invite_contact">Invite Contact</string>
	<string name="contacts">Contacts</string>
	<string name="cancel">Cancel</string>
	<string name="set">Set</string>
	<string name="add">Add</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="block">Block</string>
	<string name="unblock">Unblock</string>
	<string name="save">Save</string>
	<string name="ok">OK</string>
	<string name="crash_report_title">BlueChat has crashed</string>
	<string name="crash_report_message">By sending in stack traces you are helping the ongoing development of BlueChat\n</string>
	<string name="send_now">Send now</string>
	<string name="send_never">Never ask again</string>
	<string name="problem_connecting_to_account">Unable to connect to account</string>
	<string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
	<string name="touch_to_fix">Touch here to manage your accounts</string>
	<string name="attach_file">Attach file</string>
	<string name="not_in_roster">This is not in your Contacts. Add it?</string>
	<string name="add_contact">Add contact</string>
	<string name="send_failed">Failed</string>
	<string name="send_rejected">Rejected</string>
	<string name="preparing_image">Preparing...</string>
	<string name="action_clear_history">Clear history</string>
	<string name="clear_conversation_history">Clear Chat History</string>
	<string name="clear_histor_msg">Delete all messages within this Chat?\n</string>
	<string name="delete_messages">Delete messages</string>
	<string name="also_end_conversation">Delete Chat</string>
	<string name="choose_presence">Choose presence to contact</string>
	<string name="send_unencrypted_message">Type here</string>
	<string name="send_otr_message">Send OTR encrypted message</string>
	<string name="send_omemo_message">Send OMEMO encrypted message</string>
	<string name="send_omemo_x509_message">Send v\\OMEMO encrypted message</string>
	<string name="send_pgp_message">Send OpenPGP encrypted message</string>
	<string name="your_nick_has_been_changed">Your nickname has been changed</string>
	<string name="send_unencrypted">Send unencrypted</string>
	<string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
	<string name="openkeychain_required">OpenKeychain</string>
	<string name="openkeychain_required_long">Bluechat utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n<small>(Please restart BlueChat afterwards.)</small></string>
	<string name="restart">Restart</string>
	<string name="install">Install</string>
	<string name="openkeychain_not_installed">Please install OpenKeychain</string>
	<string name="offering">Sending…</string>
	<string name="waiting">Waiting…</string>
	<string name="no_pgp_key">No OpenPGP Key found</string>
	<string name="contact_has_no_pgp_key">BlueChat is unable to encrypt your messages because your contact is not announcing his or hers public key.\n\n<small>Please ask your contact to setup OpenPGP.</small></string>
	<string name="no_pgp_keys">No OpenPGP Keys found</string>
	<string name="pref_general">General</string>
	<string name="pref_xmpp_resource">XMPP resource</string>
	<string name="pref_xmpp_resource_summary">The name this client identifies itself with</string>
	<string name="pref_accept_files">Accept files</string>
	<string name="pref_accept_files_summary">Automatically accept files smaller than…</string>
	<string name="pref_notification_settings">Notification Settings</string>
	<string name="pref_notifications">Notifications</string>
	<string name="pref_notifications_summary">Notify when a new message arrives</string>
	<string name="pref_vibrate">Vibrate </string>
	<string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
	<string name="pref_sound">Sound</string>
	<string name="pref_sound_summary">Play ringtone with notification</string>
	<string name="pref_conference_notifications">Notifications in Public Groups</string>
	<string name="pref_conference_notifications_summary">Always notify</string>
	<string name="pref_never_send_crash">Never send crash reports</string>
	<string name="pref_confirm_messages">Confirm Messages</string>
	<string name="pref_confirm_messages_summary">Let your contact know when you have received and read a message</string>
	<string name="pref_ui_options">UI Options</string>
	<string name="pref_grant_presence_updates">Send presence updates</string>
	<string name="pref_grant_presence_updates_summary">Send presence</string>
	<string name="pref_encryption_settings">Encryption settings</string>
	<string name="pref_dont_save_encrypted">Don’t save encrypted messages</string>
	<string name="pref_dont_save_encrypted_summary">Warning: This could lead to message loss</string>
	<string name="pref_expert_options">Expert options</string>
	<string name="title_activity_about">About BlueChat</string>
	<string name="title_pref_quiet_hours">Quiet Hours</string>
	<string name="title_pref_quiet_hours_start_time">Start time</string>
	<string name="title_pref_quiet_hours_end_time">End time</string>
	<string name="title_pref_enable_quiet_hours">Enable quiet hours</string>
	<string name="pref_quiet_hours_summary">Notifications will be silenced during quiet hours</string>
	<string name="pref_use_larger_font">Increase font size</string>
	<string name="pref_use_larger_font_summary">Use larger font sizes</string>
	<string name="pref_use_send_button_to_indicate_status">Send button indicates status</string>
	<string name="pref_use_indicate_received">Request message receipts</string>
	<string name="pref_use_indicate_received_summary">Received messages will be marked with a green tick</string>
	<string name="pref_use_send_button_to_indicate_status_summary">Colorize send button to indicate status</string>
	<string name="pref_expert_options_other">Other</string>
	<string name="pref_conference_name">Group name</string>
	<string name="pref_conference_name_summary">Use Group’s subject instead of ID</string>
	<string name="pref_keep_foreground_service">Keep service in foreground</string>
	<string name="pref_keep_foreground_service_summary">Prevents the operating system from killing your connection</string>
	<string name="pref_export_logs">Export Logs</string>
	<string name="pref_export_logs_summary">Write logs to SD card</string>
	<string name="pref_show_dynamic_tags">Show dynamic tags</string>
	<string name="pref_show_dynamic_tags_summary">Display presence tags under contacts</string>
	<string name="pref_input_options">Input options</string>
	<string name="pref_enter_is_send">Enter is send</string>
	<string name="pref_enter_is_send_summary">Use enter key to send message</string>
	<string name="pref_display_enter_key">Show enter key</string>
	<string name="pref_display_enter_key_summary">Change the emoticons key to an enter key</string>
	<string name="pref_chat_states">Typing notifications</string>
	<string name="pref_chat_states_summary">Let your contact know when you are writing a new message</string>
	<string name="pref_dont_trust_system_cas_title">Don’t trust system CAs</string>
	<string name="pref_dont_trust_system_cas_summary">All certificates must be manually approved</string>
	<string name="pref_remove_trusted_certificates_title">Remove certificates</string>
	<string name="pref_remove_trusted_certificates_summary">Delete manually approved certificates</string>
	<string name="pref_quick_action_summary">Replace send button with quick action</string>
	<string name="pref_quick_action">Quick Action</string>
	<string name="choose_quick_action">Choose quick action</string>
	<string name="pref_use_white_background">Use white background</string>
	<string name="pref_use_white_background_summary">White background for messages</string>
	<string name="pref_presence_settings">Presence settings</string>
	<string name="pref_away_when_screen_off">Away when screen is off</string>
	<string name="pref_away_when_screen_off_summary">Marks your presence as away when the screen is turned off</string>
	<string name="pref_xa_on_silent_mode">Not available in silent mode</string>
	<string name="pref_xa_on_silent_mode_summary">Marks your presence as not available when phone is in silent mode</string>
	<string name="pref_connection_options">Connection options</string>
	<string name="pref_use_tor">Connect via Tor</string>
	<string name="pref_use_tor_summary">Tunnel all connections through the TOR network. Requires Orbot</string>
	<string name="a1">Blue</string>
	<string name="a3">Developed By</string>
	<string name="developer">Somveer Saini</string>
	<string name="blue">Coz everyone follow their first love of life.</string>
    <string name="bluedots">Blue messaging
        \nSource -> github.com/somveersaini/BlueChat
    </string>
	<string name="email">somveersaini@yahoo.com\ngithub.com/somveersaini</string>
</resources>