<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="privacy"
        android:title="Privacy Settings">
    <PreferenceCategory android:title="@string/pref_general">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="grant_new_contacts"
            android:summary="@string/pref_grant_presence_updates_summary"
            android:title="@string/pref_grant_presence_updates"/>

        <ListPreference
            android:defaultValue="Mobile"
            android:entries="@array/resources"
            android:entryValues="@array/resources"
            android:key="resource"
            android:summary="@string/pref_xmpp_resource_summary"
            android:title="@string/pref_xmpp_resource"/>
        <ListPreference
            android:defaultValue="524288"
            android:entries="@array/filesizes"
            android:entryValues="@array/filesizes_values"
            android:key="auto_accept_file_size"
            android:summary="@string/pref_accept_files_summary"
            android:title="@string/pref_accept_files"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="confirm_messages"
            android:summary="@string/pref_confirm_messages_summary"
            android:title="@string/pref_confirm_messages"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="chat_states"
            android:summary="@string/pref_chat_states_summary"
            android:title="@string/pref_chat_states"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="indicate_received"
            android:summary="@string/pref_use_indicate_received_summary"
            android:title="@string/pref_use_indicate_received"/>


    </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_presence_settings">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="away_when_screen_off"
                android:summary="@string/pref_away_when_screen_off_summary"
                android:title="@string/pref_away_when_screen_off"/>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="xa_on_silent_mode"
                android:summary="@string/pref_xa_on_silent_mode_summary"
                android:title="@string/pref_xa_on_silent_mode"/>
        </PreferenceCategory>
        </PreferenceScreen>

    <PreferenceScreen
            android:key="notify"
            android:title="@string/pref_notification_settings">
    <PreferenceCategory
        android:key="notifications"
        android:title="@string/pref_notification_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_notification"
            android:summary="@string/pref_notifications_summary"
            android:title="@string/pref_notifications"/>
        <PreferenceScreen
            android:dependency="show_notification"
            android:key="quiet_hours"
            android:summary="@string/pref_quiet_hours_summary"
            android:title="@string/title_pref_quiet_hours">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="enable_quiet_hours"
                android:summary="@string/pref_quiet_hours_summary"
                android:title="@string/title_pref_enable_quiet_hours"/>
            <com.iblue.chat.ui.TimePreference
                android:dependency="enable_quiet_hours"
                android:key="quiet_hours_start"
                android:negativeButtonText="@string/cancel"
                android:positiveButtonText="@string/set"
                android:title="@string/title_pref_quiet_hours_start_time"/>
            <com.iblue.chat.ui.TimePreference
                android:dependency="enable_quiet_hours"
                android:key="quiet_hours_end"
                android:negativeButtonText="@string/cancel"
                android:positiveButtonText="@string/set"
                android:title="@string/title_pref_quiet_hours_end_time"/>
        </PreferenceScreen>
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="show_notification"
            android:key="vibrate_on_notification"
            android:summary="@string/pref_vibrate_summary"
            android:title="@string/pref_vibrate"/>

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="show_notification"
            android:key="notification_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/pref_sound_summary"
            android:title="@string/pref_sound"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="show_notification"
            android:key="always_notify_in_conference"
            android:summary="@string/pref_conference_notifications_summary"
            android:title="@string/pref_conference_notifications"/>
    </PreferenceCategory>
        </PreferenceScreen>
    <PreferenceScreen
            android:key="Appearence"
            android:title="User Interface Settings">
    <PreferenceCategory android:title="@string/pref_ui_options">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="use_subject"
            android:summary="@string/pref_conference_name_summary"
            android:title="@string/pref_conference_name"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_white_background"
            android:title="@string/pref_use_white_background"
            android:summary="@string/pref_use_white_background_summary"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="use_larger_font"
            android:summary="@string/pref_use_larger_font_summary"
            android:title="@string/pref_use_larger_font"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="send_button_status"
            android:summary="@string/pref_use_send_button_to_indicate_status_summary"
            android:title="@string/pref_use_send_button_to_indicate_status"/>
        <ListPreference
            android:defaultValue="recent"
            android:dialogTitle="@string/choose_quick_action"
            android:entries="@array/quick_actions"
            android:entryValues="@array/quick_action_values"
            android:key="quick_action"
            android:summary="@string/pref_quick_action_summary"
            android:title="@string/pref_quick_action"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_dynamic_tags"
            android:summary="@string/pref_show_dynamic_tags_summary"
            android:title="@string/pref_show_dynamic_tags"/>
    </PreferenceCategory>
        <PreferenceCategory android:title="@string/pref_input_options">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="enter_is_send"
                android:summary="@string/pref_enter_is_send_summary"
                android:title="@string/pref_enter_is_send"/>
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="display_enter_key"
                android:summary="@string/pref_display_enter_key_summary"
                android:title="@string/pref_display_enter_key"/>
        </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen
            android:key="expert"
            android:title="@string/pref_expert_options">
            <PreferenceCategory android:title="@string/pref_encryption_settings">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="dont_save_encrypted"
                    android:summary="@string/pref_dont_save_encrypted_summary"
                    android:title="@string/pref_dont_save_encrypted"/>
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="dont_trust_system_cas"
                    android:summary="@string/pref_dont_trust_system_cas_summary"
                    android:title="@string/pref_dont_trust_system_cas_title"/>
                <Preference
                    android:key="remove_trusted_certificates"
                    android:summary="@string/pref_remove_trusted_certificates_summary"
                    android:title="@string/pref_remove_trusted_certificates_title"/>
            </PreferenceCategory>
            <PreferenceCategory
                android:title="@string/pref_connection_options"
                android:key="connection_options">
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="use_tor"
                    android:title="@string/pref_use_tor"
                    android:summary="@string/pref_use_tor_summary"/>
            </PreferenceCategory>


            <PreferenceCategory android:title="@string/pref_expert_options_other">

                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="keep_foreground_service"
                    android:summary="@string/pref_keep_foreground_service_summary"
                    android:title="@string/pref_keep_foreground_service"/>
                <com.iblue.chat.ui.ExportLogsPreference
                        android:key="export_logs"
                        android:title="@string/pref_export_logs"
                        android:summary="@string/pref_export_logs_summary"/>
            </PreferenceCategory>
        </PreferenceScreen>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="never_send"
            android:title="@string/pref_never_send_crash"/>

    <com.iblue.chat.ui.AboutPreference
        android:title="@string/title_activity_about"/>
</PreferenceScreen>
